# opentyrian-wasm

./: .gitignore  CMakeLists.txt  Dockerfile.wasm  Makefile  README  README-WASM.md  build-was-docker.sh  build-wasm.ps1  cleanup-wasm-build.ps1  cleanup-wasm-build.sh  index.html  serve.bat  serve.sh  wasm-port-plan.md
release/: opentyrian.html  opentyrian.js  opentyrian.wasm
src/: config.c  video.c
wasm/: shell.html
